@@ -56,6 +56,10 @@ element of the <a href="table.html">&lt;table&gt;</a> element.</p>
               <th>SqlServer</th>
               <td>This will translate to <code>SELECT SCOPE_IDENTITY()</code></td>
             </tr>
+            <tr>
+              <th>SYBASE</th>
+              <td>This will translate to <code>SELECT @@IDENTITY</code></td>
+            </tr>
           </table>
         </td>
   </tr>
