@@ -67,6 +67,7 @@ public class JavaBeansUtil {
             case '@':
             case '$':
             case '#':
+            case ' ':
 				if (sb.length() > 0) {
 					nextUpperCase = true;
 				}
